# binocular_detection

./: .gitattributes  CMakeLists.txt  README.md  outputVideo.avi  test  test.cpp
include/: HRNet-W32.h  HoughLines.h  Shi-Tomasi_rectCenter.h  blackContours.h  depthCompute.h  yolov5s.h
libs/: libonnxruntime.so.1.12.1
res/: depth.txt  myclass.txt
src/: HRNet-W32.cpp  TensorrtExecutionProvider_TRT_Subgraph.onnx  depthCompute.cpp  main.cpp  yolov5s.cpp
weights/: sim_HRNet-W32.onnx
